[package]
name = "thumbor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.1", features = ["add-extension", "compression-full", "trace" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = "0.11"
prost = "0.8"
base64 = "0.13"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"] }
lru = "0.6"
percent-encoding = "2"
image = "0.23"
photon-rs = "0.3"
lazy_static = "1"

[build-dependencies]
prost-build = "0.8"